--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
 
-                        <img src="imgs/trollada.jpg" alt="Call of Gruty" height="400" windth="660">
+                        <img src="imgs/trollada.jpg" alt="" height="400" windth="660">
 
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
