--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
 
-                        <img src="/trollada.jpg" alt="img" height='200px' windth="50%">
+                        <img src="trollada.jpg" alt="img" height='200px' windth="50%">
 
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
