--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             padding: 0;
         }
 
+        .container>div>img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
         /* @keyframes changeColor { 
             0% {
                 color: #000000;
@@ -218,9 +224,9 @@
                 <ul>
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
-
-                        <img src="trollada.jpg" alt="img" height='200px' windth="50%">
-
+                        <div>
+                            <img src="imgs/trollada.jpg" alt="" height='200px' windth="50%">
+                        </div>
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
                             desastres naturais, guerras nucleares ou pandemias globais. Estamos falando da
@@ -283,6 +289,7 @@
             <footer>
                 <p>&copy; 2023 NOTIF-AQ</p>
             </footer>
+           
     </body>
 
 </html>
