--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
                         <div>
-                            <img src="trollada.jpg" alt="" height='200px' windth="50%">
+                            <img src="troladapng.png" alt="" height='200px' windth="50%">
                         </div>
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
