--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             margin: 0;
             padding: 0;
         }
+        /* bagulho q resolve o tamanho da img*/
+        img {
+            width: 30%;
+            max-width: 100%; 
+            height: auto; 
+        }
 
         .container>div>img {
             width: 100%;
@@ -225,7 +231,7 @@
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
                         <div>
-                            <img src="troladapng.png" alt="" height='200px' windth="50%">
+                            <img src="imgs/trollada.jpg" alt="" >
                         </div>
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
