--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
                         <div>
-                            <img src="imgs/trollada.jpg" alt="" >
+                            <img src="trollada.jpg" alt="" >
                         </div>
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
