--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
             <h1>NOTIF-AQ</h1>
             <p>Portal de noticias do campus Aquidauana</p>
             <a href="https://www.ifms.edu.br/">
-                <img class="imagem-superior-direita" src="imgs/iflogo.png" alt="IFMS">
+                <img class="imagem-superior-direita" src="iflogo.png" alt="IFMS">
             </a>
             <a href="https://instagram.com/notif.aq?igshid=MzRlODBiNWFlZA==">
-                <img class="img-insta" src="imgs/instalogo.png" alt="Instagram">
+                <img class="img-insta" src="instalogo.png" alt="Instagram">
             </a>
 
         </header>
@@ -259,7 +259,7 @@
                     <li>
                         <h2>Catástrofe Iminente: A Trolada Final de Everson Zoio Abala o Mundo</h2>
                         <div>
-                            <img src="imgs/trollada.jpg" alt="">
+                            <img src="trollada.jpg" alt="">
                         </div>
                         <p>Uma catástrofe de proporções apocalípticas está prestes a abalar o mundo, e não
                             envolve<br>
